# Twitter_rust

./: Cargo.toml  justfile
backend/query/: Cargo.toml
backend/query/src/: lib.rs  post.rs  schema.rs  session.rs  test_db.rs  user.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  router.rs
backend/server/src/handler/: post.rs  user.rs
frontend/: Cargo.toml
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css
frontend/src/elements/: appbar.rs  keyed_notification_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  content.rs  quick_respond.rs
frontend/src/page/: edit_profile.rs  home.rs  login.rs  new_post.rs  register.rs  trending.rs  view_profile.rs
frontend/src/page/home/: bookmarked.rs  liked.rs
frontend/src/page/new_post/: chat.rs  image.rs  poll.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml  lib.rs
shared/endpoint/src/: lib.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  endpoints.rs  types.rs
